[tool.poetry]
name = "gom"
version = "0.2.0"
description = ""
authors = ["Ben Gubler <nebrelbug@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
gom = 'gom.main:run'

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
