[tool.poetry]
name = "gom"
version = "0.3.0"
description = "Live GPU utilization monitor, inspired by nvidia-smi. Shows per-container GPU usage as well as total GPU usage."
authors = ["Ben Gubler <nebrelbug@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
gom = 'gom.main:main'

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.0"
tabulate = "^0.9.0"
pynvml = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
